fixes + inlay hint disabled for now